// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EntryStatus renders 1`] = `null`;

exports[`EntryStatus renders 2`] = `
<p
  class="MuiTypography-root MuiTypography-body1 css-14wzn0b-MuiTypography-root"
>
  (event.states.tentative_info)
</p>
`;

exports[`EntryStatus renders 3`] = `
<p
  class="MuiTypography-root MuiTypography-body1 css-14wzn0b-MuiTypography-root"
>
  (event.states.cancelled_info)
</p>
`;

exports[`EntryStatus renders 4`] = `null`;

exports[`EntryStatus renders 5`] = `
<p
  class="MuiTypography-root MuiTypography-body1 css-14wzn0b-MuiTypography-root"
>
  (event.states.extended_info)
</p>
`;
